--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
+    "deb": "nodemon --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../helsinkiU/part2/phonebook && npm run build && cp -r dist ../../../helsinkiU-part3",
     "deploy:full": "npm run build:ui && git add . && git commit -m \"Deploy UI Build: $(date '+%Y-%m-%d %H:%M')\" && git push"
-
   },
   "author": "ilovefronten",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.9.1",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
